--- a/index.html
+++ b/index.html
@@ -3,24 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box Model</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Cinema</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-
-    <h1>Carros e Bicicletas</h1>
-
-    <div>
-        <h2>Carro: <span>R$ 1999</span></h2>
-        <p>Carro modelo <span>2045</span> com <span>200km</span> rodados.</p>
-        <a href="Comprar carro">Comprar Carro</a>
-    </div>
-
-    <div>
-        <h2>Bicicletas: <span>R$ 199</span></h2>
-        <p>Bicicleta modelo <span>2050</span> com <span>20km</span> rodados.</p>
-        <a href="Comprar Bicicleta">Comprar Bicicleta</a>
-    </div>
-
+    <h1>Cinema</h1>
+    <h2><a href="estados/sp.html">São Paulo</a></h2>
+    <h2><a href="./estados/rj.html">Rio de Janeiro</a></h2>
+ 
+    
 </body>
 </html>
