--- a/index.html
+++ b/index.html
@@ -1,28 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display Imagem</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anuncios</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-<h1>Perceptron</h1>
 
-<div class="grid">
-    <img src="robot.png" alt="robô" class="Imagem">
- <div class="info">
-    <span class="price">R$ 5999</span>  
+  <aside>
+    <nav>
+      <ul>
+        <li><a href=""><img src="./img/icones/IA.svg" alt="">HOME</a></li>
+        <li><a href=""><img src="./img/icones/IA.svg" alt="">ANUNCIO</a></li>
+        <li><a href=""><img src="./img/icones/IA.svg" alt="">CATEGORIA</a></li>
+        <li><a href=""><img src="./img/icones/IA.svg" alt="">FILTRO</a></li>
+        <li><a href=""><img src="./img/icones/IA.svg" alt="">CONTATO</a></li>
+      </ul>
+    </nav>
+    <div>
+    <img src="./img/ROBOCRAFT.png" alt="">
+    <img src="./img/robot.png" alt="">
+  </div>
+  </aside>
 
-    <p>O Perceptron é o melhor robô doméstico já criado e disponível no mercado. <br>
-    Capaz de realizar as mais diversas tarefas, ele é o item que<br> faltava para facilitar sua vida 
-    e tornar o ambiente mais seguro e agradável.</p>
-       
-<a href="/">Comprar</a>
-        
-      </div>
-    </div>
-</div> 
+  <main>
+    <ul>
+      <li class="item">
+        <img src="./img/robot.png" alt="">
+        <div class="descricao">
+         <span id="promo">Promoção</span>
+          <h1>Anuncio 1</h1>
+          <p>Descricao do anuncio weudhua  wedwdc</p>
+          <span>Local|Data</span>
+         <div class="valores">
+          <span id="taxado">5000</span>
+          <span>R$ 2099</span>
+        </div>
+        </div>
+      </li>
+
+      <li class="item">
+        <img src="./img/robot.png" alt="">
+        <div class="descricao">
+          <h1>Anuncio 1</h1>
+          <p>Descricao do anuncio weudhua  wedwdc</p>
+          <span>Local|Data</span>
+          <span>5000</span>
+          <span>R$ 2099</span>
+        </div>
+      </li>
+      <li class="item">
+        <img src="./img/robot.png" alt="">
+        <div class="descricao">
+          <h1>Anuncio 1</h1>
+          <p>Descricao do anuncio weudhua  wedwdc</p>
+          <span>Local|Data</span>
+          <span>5000</span>
+          <span>R$ 2099</span>
+        </div>
+      </li>
+      <li class="item">
+        <img src="./img/robot.png" alt="">
+        <div class="descricao">
+          <h1>Anuncio 1</h1>
+          <p>Descricao do anuncio weudhua  wedwdc</p>
+          <span>Local|Data</span>
+          <span>5000</span>
+          <span>R$ 2099</span>
+        </div>
+      </li>
+      <li class="item">
+        <img src="./img/robot.png" alt="">
+        <div class="descricao">
+          <h1>Anuncio 1</h1>
+          <p>Descricao do anuncio weudhua  wedwdc</p>
+          <span>Local|Data</span>
+          <span>5000</span>
+          <span>R$ 2099</span>
+        </div>
+      </li>
+      <li class="item">
+        <img src="./img/robot.png" alt="">
+        <div class="descricao">
+          <h1>Anuncio 1</h1>
+          <p>Descricao do anuncio weudhua  wedwdc</p>
+          <span>Local|Data</span>
+          <span>5000</span>
+          <span>R$ 2099</span>
+        </div>
+      </li>
+    </ul>
+  </main>
+
+
+  <footer>
+    <p>Direitos reservados</p>
+  </footer>
 </body>
+
 </html>
