Primeiro exercício de JS

--- a/index.html
+++ b/index.html
@@ -1,104 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anuncios</title>
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Condicionais</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+    <button class="botao">Adicionar</button>
+    <div class="container">0</div>
+    <div class="mensagem"></div>
 
-  <aside>
-    <nav>
-      <ul>
-        <li><a href=""><img src="./img/icones/IA.svg" alt="">HOME</a></li>
-        <li><a href=""><img src="./img/icones/IA.svg" alt="">ANUNCIO</a></li>
-        <li><a href=""><img src="./img/icones/IA.svg" alt="">CATEGORIA</a></li>
-        <li><a href=""><img src="./img/icones/IA.svg" alt="">FILTRO</a></li>
-        <li><a href=""><img src="./img/icones/IA.svg" alt="">CONTATO</a></li>
-      </ul>
-    </nav>
-    <div>
-    <img src="./img/ROBOCRAFT.png" alt="">
-    <img src="./img/robot.png" alt="">
-  </div>
-  </aside>
+<script src="script.js"></script>
 
-  <main>
-    <ul>
-      <li class="item">
-        <img src="./img/robot.png" alt="">
-        <div class="descricao">
-         <span id="promo">Promoção</span>
-          <h1>Anuncio 1</h1>
-          <p>Descricao do anuncio weudhua  wedwdc</p>
-          <span>Local|Data</span>
-         <div class="valores">
-          <span id="taxado">5000</span>
-          <span>R$ 2099</span>
-        </div>
-        </div>
-      </li>
-
-      <li class="item">
-        <img src="./img/robot.png" alt="">
-        <div class="descricao">
-          <h1>Anuncio 1</h1>
-          <p>Descricao do anuncio weudhua  wedwdc</p>
-          <span>Local|Data</span>
-          <span>5000</span>
-          <span>R$ 2099</span>
-        </div>
-      </li>
-      <li class="item">
-        <img src="./img/robot.png" alt="">
-        <div class="descricao">
-          <h1>Anuncio 1</h1>
-          <p>Descricao do anuncio weudhua  wedwdc</p>
-          <span>Local|Data</span>
-          <span>5000</span>
-          <span>R$ 2099</span>
-        </div>
-      </li>
-      <li class="item">
-        <img src="./img/robot.png" alt="">
-        <div class="descricao">
-          <h1>Anuncio 1</h1>
-          <p>Descricao do anuncio weudhua  wedwdc</p>
-          <span>Local|Data</span>
-          <span>5000</span>
-          <span>R$ 2099</span>
-        </div>
-      </li>
-      <li class="item">
-        <img src="./img/robot.png" alt="">
-        <div class="descricao">
-          <h1>Anuncio 1</h1>
-          <p>Descricao do anuncio weudhua  wedwdc</p>
-          <span>Local|Data</span>
-          <span>5000</span>
-          <span>R$ 2099</span>
-        </div>
-      </li>
-      <li class="item">
-        <img src="./img/robot.png" alt="">
-        <div class="descricao">
-          <h1>Anuncio 1</h1>
-          <p>Descricao do anuncio weudhua  wedwdc</p>
-          <span>Local|Data</span>
-          <span>5000</span>
-          <span>R$ 2099</span>
-        </div>
-      </li>
-    </ul>
-  </main>
-
-
-  <footer>
-    <p>Direitos reservados</p>
-  </footer>
 </body>
-
 </html>
