--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Condicionais</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <button class="botao">Adicionar</button>
-    <div class="container">0</div>
-    <div class="mensagem"></div>
 
-<script src="script.js"></script>
+  <body>
+    
+    <div class="circulo"></div>
+    <script src="script.js"></script>
 
-</body>
+  </body>
 </html>
+
