exercicio simples de Js
selecionar a imagem que se expandirá na tela

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+cl<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Atividade</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
-  <body>
-    
-    <div class="circulo"></div>
-    <script src="script.js"></script>
-
-  </body>
+<body>
+    <main>
+        <div class="aulinha">
+            <img src="./assets/calcifer.png" alt="">
+            <img src="./assets/20240220-sophie-1024x554.webp" alt="">
+            <img src="./assets/ocasteloanimado-destacada.jpg" alt="">
+        </div>
+        <img id="destaque"src="./assets/sophie.png" alt="">
+    </main> 
+    <script src="./script.js"></script>
+</body>
 </html>
-
